Fix flickering issue when in between scrolling and non-scrolling states. (#3408)

--- a/theme/common.less
+++ b/theme/common.less
@@ -378,6 +378,7 @@ div.simframe > iframe {
 .ui.modal.projectsdialog .tabsegment {
     min-height: 450px;
     background: white !important;
+    margin: 0;
 }
 
 
